clang-ir/tests/snapshots/snapshot_fixtures__fixtures__noreturn_prototype.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/noreturn_prototype.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[17] = "bailing with %d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[6] = "main\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn exit(%arg0: s32i) -> void [external, c, nothrow];
fn bail(%arg0: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %8 = alloca s32i, "code", align 4
        store %arg0, %8
        %9 = get_global @printf : ((s8i*, ...) -> s32i)*
        %10 = get_global @.str : s8i[17]*
        %11 = cast(array_to_ptrdecay) %10 : s8i*
        %12 = load %8 : s32i, align 4
        %13 = call @printf(%11, %12) : s32i [all]
        %14 = get_global @exit : ((s32i) -> void)*
        %15 = load %8 : s32i, align 4
        call @exit(%15) [all]
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str.1 : s8i[6]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = call @printf(%4) : s32i [all]
    %6 = const 7 : s32i
    call @bail(%6) [all]
    %7 = load %0 : s32i
    return %7
}
