clang-ir/tests/snapshots/snapshot_fixtures__fixtures__overflow_scalar_ops.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/overflow_scalar_ops.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[7] = "%d %d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[7] = "%d %u\n" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[9] = "%d %lld\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "ri", align 4
    %2 = alloca u32i, "ru", align 4
    %3 = alloca s64i, "rll", align 8
    %4 = alloca s32i, "add_i", align 4
    %5 = alloca s32i, "sub_i", align 4
    %6 = alloca s32i, "mul_i", align 4
    %7 = alloca s32i, "add_u", align 4
    %8 = alloca s32i, "mul_ll", align 4
    %9 = const 0 : s32i
    store %9, %0
    %10 = const 0 : s32i
    store %10, %1, align 4
    %11 = const 0 : u32i
    store %11, %2, align 4
    %12 = const 0 : s64i
    store %12, %3, align 8
    %13 = const 2147483647 : s32i
    %14 = const 1 : s32i
    %15#0, %15#1 = add.overflow %13, %14 : s32i
    store %15#0, %1, align 4
    %16 = cast(bool_to_int) %15#1 : s32i
    store %16, %4, align 4
    %17 = get_global @printf : ((s8i*, ...) -> s32i)*
    %18 = get_global @.str : s8i[7]*
    %19 = cast(array_to_ptrdecay) %18 : s8i*
    %20 = load %4 : s32i, align 4
    %21 = load %1 : s32i, align 4
    %22 = call @printf(%19, %20, %21) : s32i [all]
    %23 = const -2147483647 : s32i
    %24 = const 1 : s32i
    %25 = sub %23, %24 : s32i [nsw]
    %26 = const 1 : s32i
    %27#0, %27#1 = sub.overflow %25, %26 : s32i
    store %27#0, %1, align 4
    %28 = cast(bool_to_int) %27#1 : s32i
    store %28, %5, align 4
    %29 = get_global @printf : ((s8i*, ...) -> s32i)*
    %30 = get_global @.str : s8i[7]*
    %31 = cast(array_to_ptrdecay) %30 : s8i*
    %32 = load %5 : s32i, align 4
    %33 = load %1 : s32i, align 4
    %34 = call @printf(%31, %32, %33) : s32i [all]
    %35 = const 1073741824 : s32i
    %36 = const 2 : s32i
    %37#0, %37#1 = mul.overflow %35, %36 : s32i
    store %37#0, %1, align 4
    %38 = cast(bool_to_int) %37#1 : s32i
    store %38, %6, align 4
    %39 = get_global @printf : ((s8i*, ...) -> s32i)*
    %40 = get_global @.str : s8i[7]*
    %41 = cast(array_to_ptrdecay) %40 : s8i*
    %42 = load %6 : s32i, align 4
    %43 = load %1 : s32i, align 4
    %44 = call @printf(%41, %42, %43) : s32i [all]
    %45 = const 4294967295 : u32i
    %46 = const 1 : u32i
    %47#0, %47#1 = add.overflow %45, %46 : u32i
    store %47#0, %2, align 4
    %48 = cast(bool_to_int) %47#1 : s32i
    store %48, %7, align 4
    %49 = get_global @printf : ((s8i*, ...) -> s32i)*
    %50 = get_global @.str.1 : s8i[7]*
    %51 = cast(array_to_ptrdecay) %50 : s8i*
    %52 = load %7 : s32i, align 4
    %53 = load %2 : u32i, align 4
    %54 = call @printf(%51, %52, %53) : s32i [all]
    %55 = const 3037000500 : s64i
    %56 = const 3037000500 : s64i
    %57#0, %57#1 = mul.overflow %55, %56 : s64i
    store %57#0, %3, align 8
    %58 = cast(bool_to_int) %57#1 : s32i
    store %58, %8, align 4
    %59 = get_global @printf : ((s8i*, ...) -> s32i)*
    %60 = get_global @.str.2 : s8i[9]*
    %61 = cast(array_to_ptrdecay) %60 : s8i*
    %62 = load %8 : s32i, align 4
    %63 = load %3 : s64i, align 8
    %64 = call @printf(%61, %62, %63) : s32i [all]
    %65 = const 0 : s32i
    store %65, %0
    %66 = load %0 : s32i
    return %66
}
